# ecs-deployment-readiness-agent

./: .editorconfig  .env.example  .env.sample  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
architecture/: architecture.mmd
backend/: __init__.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: routes.py
backend/app/aws/: __init__.py  cloudwatch_client.py  ecr_client.py  elbv2_client.py  iam_client.py  session.py
backend/app/checks/: __init__.py  alb_check.py  cloudwatch_check.py  dependency_check.py  docker_image_check.py  ecr_check.py  env_var_check.py  health_check.py  iam_role_check.py  port_check.py  secret_scan_check.py  task_size_check.py
backend/app/core/: __init__.py  config.py  models.py  redaction.py  runner.py  scoring.py
backend/app/llm/: __init__.py  base.py  ollama_client.py  rule_based_summary.py
backend/app/report/: json_report.py  markdown_report.py
backend/app/storage/: __init__.py  local_store.py
backend/tests/: test_env_var_check.py  test_scoring.py  test_secret_scan_check.py  test_task_size_check.py
docs/: architecture.md  aws-readonly-iam-policy.md  local-demo-guide.md  production-readiness-checklist.md  screenshot-guide.md
examples/: readiness-config.yaml  readiness-request.json  sample-report.json  sample-report.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: CheckResultCard.jsx  Layout.jsx  ScoreCard.jsx  StatusBadge.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  (+3 more)
